--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@angular/compiler": "~21.0.0",
     "@angular/core": "~21.0.0",
     "@angular/forms": "~21.0.0",
+    "@angular/localize": "^21.0.8",
     "@angular/platform-browser": "~21.0.0",
     "@angular/router": "~21.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^20.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.8",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
